@@ -4,6 +4,7 @@ Version 1.0.1-CVS (?? ??? 2005)
         user preferences for displaying unapproved.
       1212667: Install script - Database Type Problem
   - Other bugs fixed:
+        Category was lost wan clicking on prev/next month in month.php
   - New Features / Enhancements / Changes:
     + Applied patch 1171807: reminder sent late if cron run at exact
       second of reminder (was accidentally not included in 1.0.0)
