@@ -1,4 +1,5 @@
 Version 1.0.1-CVS (?? ??? 2005)
+ - Fixed bug: category was lost wan clicking on prev/next month in month.php
  - Fixed bug 1212667: Install script - Database Type Problem
  - Fixed bug 1205680: upcoming.php was including unapproved.  will now use
    user preferences for displaying unapproved.
